[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/ships/FighterShip.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.3566

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="FighterShip" type="Node2D" groups=[
"fighters",
"ships",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.195751, 0.195751 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1024, 0, 128, 128 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="SelectionSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.207628, 0.207628 )
frames = SubResource( 4 )
playing = true

[node name="Tween" type="Tween" parent="."]

[node name="InterstellarSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1.24171, 1.46621 )
scale = Vector2( 0.202536, 0.202536 )
frames = SubResource( 8 )
frame = 2
playing = true

[node name="FireTimer" type="Timer" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
